--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ social_links:
   LinkedIn: https://www.linkedin.com/in/jkeshav-bvignesh
   GitHub: https://github.com/jkeshav-bvignesh
   facebook: https://www.facebook.com/people/Keshav-Vignesh/100005469136863
+  Instagram: https://www.instagram.com/keshavvignesh/
 
 plugins:
 - jekyll-sitemap
