added a new archives layout

--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ plugins:
 jekyll-archives:
   enabled:
     - categories
-  layout: blog
+  layout: archives
   permalinks:
     category: '/category/:name/'
   
