--- a/_config.yml
+++ b/_config.yml
@@ -45,3 +45,13 @@ sharing_links: # Appear at the bottom of single blog posts, add as desired. The 
   Twitter: "#0d94e7"
   facebook: "#3B5998"
   Email: true
+
+favicons: # Favicons are also used in the manifest file. Syntax is 'size: path'
+  16: '/assets/logos/favicon-16x16.png'
+  32: '/assets/logos/favicon-32x32.png'
+  96: '/assets/logos/favicon-32x32.png'
+  120: '/assets/logos/favicon-32x32.png'
+  144: '/assets/logos/favicon-32x32.png'
+  180: '/assets/logos/favicon-32x32.png'
+  192: '/assets/logos/android-chrome-192x192.png'
+  512: '/assets/logos/android-chrome-512x512.png'
