Added RSS Feed link

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ social_links:
   LinkedIn: https://www.linkedin.com/in/jkeshav-bvignesh
   GitHub: https://github.com/jkeshav-bvignesh
   facebook: https://www.facebook.com/people/Keshav-Vignesh/100005469136863
+  RSS: /feed.xml
 
 plugins:
 - jekyll-sitemap
