Updated remote_theme url

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-# remote_theme: daviddarnes/alembic
-theme: alembic-jekyll-theme
+remote_theme: daviddarnes/alembic@main
+#theme: alembic-jekyll-theme
 title: Keshav Bhupathy Vignesh
 description: Developer. Designer. Python. ROS
 logo: /images/logo_dark.png
